change path to relatives

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		}
 		@font-face {
 			font-family: 'Cyrulik';
-			src: url("/fonts/Cyrulik-Stencil.woff") format("woff"),
-			url("/fonts/Cyrulik-Stencil.otf") format("opentype"),
-			url("/fonts/Cyrulik-Stencil.ttf") format("truetype");
+			src: url("fonts/Cyrulik-Stencil.woff") format("woff"),
+			url("fonts/Cyrulik-Stencil.otf") format("opentype"),
+			url("fonts/Cyrulik-Stencil.ttf") format("truetype");
 		}
 		body {
 			font-family: 'Poppins', sans-serif;
@@ -37,7 +37,7 @@
 		.bg {
 			position: absolute;
 			padding-top: 112.639%;
-			background-image: url('/assets/background.jpg');
+			background-image: url('assets/background.jpg');
 			background-position: center center;
 			background-size: cover;
 			top: 0;
@@ -173,7 +173,7 @@
 		</div>
 		<div class="fluid">
 			<div class="logo-wrap">
-				<img class="w-h-logo" src="/assets/wielkie-historie.png" />
+				<img class="w-h-logo" src="assets/wielkie-historie.png" />
 				<a href="http://www.fundacjapit.pl " class="link" target="_blank">
 					www.fundacjapit.pl
 				</a>
@@ -194,8 +194,8 @@
 					zgłoś się
 				</a>
 			</div>
-			<div class="logo-wrap">
-				<img class="m-k-logo" src="/assets/ministerstwo-kultury.png" />
+			<div class="logo-wrap" style="min-width: 18em">
+				<img class="m-k-logo" src="assets/ministerstwo-kultury.png" />
 				<p style="font-size: 0.65em; line-height: 1.4em; margin: 0">
 					<br />
 					Projekt realizowany przez
