update text & link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			display: flex;
 			align-items: flex-end;
 			font-size: 1.125em;
-			padding: 2em 0;
+			padding: 2em;
 			position: absolute;
 			left: 0;
 			right: 0;
@@ -174,23 +174,21 @@
 		<div class="fluid">
 			<div class="logo-wrap">
 				<img class="w-h-logo" src="assets/wielkie-historie.png" />
-				<a href="http://www.fundacjapit.pl " class="link" target="_blank">
+				<a href="http://www.fundacjapit.pl/ " class="link" target="_blank">
 					www.fundacjapit.pl
 				</a>
 			</div>
-			<div style="flex: 0 1 45%; align-self: flex-start;">
-				Poprzez projekt <span class="bigger">„Ostatni dzień lata w letnisku”</span> pragniemy odtworzyć świat na chwilę przed wybuchem II wojny światowej, cofnąć się w czasie i odnaleźć symboliczny ostatni dzień lata, wspomnienie dzieciństwa, które za chwilę miało się skończyć.
-				<br />
-				Chcemy zgłębić historię podwarszawskich uzdrowisk na tzw. linii otwockiej, opowiedzieć o życiu kulturalnym mieszkańców, o rozrywkach przyjezdnych letników i o różnorodnej społeczności, która przebywała na tym terenie.
-			</div>
-			<div style="flex: 0 1 50%; align-self: flex-start;">
-				Warsztaty adresowne są do uczniów warszawskich szkół średnich. Zapraszamy osoby nie tylko zainteresowane odkrywaniem historii, ale wszystkich otwartych na nowe opowieści.
+			<div style="flex: 0 1 100%; align-self: flex-start;">
+				<span class="bigger">„Ostatni dzień lata w letnisku”</span> to próba odtworzenia świata na chwilę przed wybuchem II wojny światowej. Cofnijmy się w czasie i odnajdźmy klimat podwarszawskich uzdrowisk na tzw. linii otwockiej. Ocalmy wspomnienie tamtych dni!
 				<br />
 				<br />
-				Przez <span class="bigger">5 dni</span> warsztatowych uczestnicy pod okiem doświadczonych prowadzących będą odkrywać lokalne dziedzictwo: odwiedzą archiwa, spotkają się ze świadkami historii i dowiedzą się, jak podzielić się efektami własnych poszukiwań z szerszą publicznością.
+				Warsztaty adresowane są do uczniów warszawskich szkół średnich. Zapraszamy nie tylko pasjonatów historii lokalnej, ale wszystkich otwartych na nowe opowieści.
+				<br />
+				<br />
+				Przez <span class="bigger">5 dni (1-5 lipca)</span> uczestnicy pod okiem doświadczonych prowadzących będą odkrywać lokalne dziedzictwo: odwiedzą archiwa, spotkają się z świadkami historii i twórcami ekspozycji. Efekty swoich poszukiwań przedstawią na wystawie plenerowej.
 			</div>
 			<div class="logo-wrap">
-				<a href="" class="link" target="_blank">
+				<a href="https://forms.gle/fPbium7Hq6YFBuny6" class="link" target="_blank">
 					zgłoś się
 				</a>
 			</div>
