--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 			margin: 0;
 			padding: 0;
 		}
-		h1, h3 {
+		h1, h2 {
 			font-family: 'Cyrulik', sans-serif;
-			font-size: 6.250em;
+			font-size: 5.000em;
 			line-height: 1.1em;
 			margin: 0;
+			color: #4D4D4D;
 		}
-		h3 {
-			font-size: 2.125em;
-			line-height: 2em;
-			margin-left: -2em;
+		h1 {
+			font-size: 5.313em;
+			text-align: right;
 		}
 		.bg {
 			position: absolute;
@@ -53,7 +53,13 @@
 			max-width: 87.500em;
 			margin: 0 auto;
 			display: flex;
-			align-items: flex-end;
+			justify-content: space-between;
+		}
+		.scroll {
+			position: absolute;
+			width: 5em;
+			height: 5em;
+			top: 90vh;
 		}
 		.fluid {
 			background: white;
@@ -72,7 +78,7 @@
 		.bigger {
 			font-size: 1.125em;
 		}
-		.link {
+		.btn {
 			border: 3px solid #E7D814;
 			white-space: nowrap;
 			padding: 5px 10px;
@@ -80,6 +86,32 @@
 			text-decoration: none;
 			color: black;
 		}
+
+		.link {
+			color: black;
+			text-decoration: none;
+			font-size: 1.2em;
+			display: flex;
+			align-items: center;
+			margin-top: 2em;
+		}
+		.link img {
+			height: 2em;
+			width: auto;
+			padding-right: .5em;
+		}
+		.btn-big {
+			border: 4px solid #E7D814;
+			white-space: nowrap;
+			padding: 0px 10px;
+			font-size: 2em;
+			text-decoration: none;
+			color: black;
+			font-weight: bolder;
+			margin-top: 1em;
+			display: inline-block;
+		}
+
 		.w-h-logo {
 			width: 100%;
 		}
@@ -171,37 +203,59 @@
 	<!-- End Google Tag Manager (noscript) -->
 	<div class="bg">
 		<div class="cont">
-			<h1>
+			<h2>
 				Ostatni
 				<br />
 				dzień
 				<br />
 				lata
-			</h1>
-			<h3>
-				Wspólnie stwórzmy wystawę!
-			</h3>
+			</h2>
+			<div>
+				<h1>
+					Wspólnie stwórzmy wystawę!
+				</h1>
+				<a href="https://forms.gle/fPbium7Hq6YFBuny6" class="btn-big" target="_blank">
+					zgłoś się
+				</a>
+			</div>
+			<img class="scroll" src="assets/scroll.png" />
 		</div>
 		<div class="fluid">
 			<div class="logo-wrap">
 				<img class="w-h-logo" src="assets/wielkie-historie.png" />
-				<a href="http://www.fundacjapit.pl/ " class="link" target="_blank">
-					www.fundacjapit.pl
+				<a href="http://www.wielkiehistorie.pl/ " class="btn" target="_blank">
+					www.wielkiehistorie.pl
+				</a>
+				<a target="_blank" class="link" href="https://www.facebook.com/wielkiehistorie/">
+					<img src="assets/fb.png" />
+					Wielkie Historie
 				</a>
 			</div>
-			<div style="flex: 0 1 100%; align-self: flex-start;">
-				<span class="bigger">„Ostatni dzień lata w letnisku”</span> to próba odtworzenia świata na chwilę przed wybuchem II wojny światowej. Cofnijmy się w czasie i odnajdźmy klimat podwarszawskich uzdrowisk na tzw. linii otwockiej. Ocalmy wspomnienie tamtych dni!
+			<div style="flex: 0 1 100%; align-self: flex-end;">
+				Chcemy zatrzymać to co przemija – czas beztroskich wakacji.
+				Sięgamy po wspomnienia bezcennych chwil, mówimy
+				o ostatnim takim lecie, o lipcu i sierpniu 1939 roku.
 				<br />
 				<br />
-				Warsztaty adresowane są do uczniów warszawskich szkół średnich. Zapraszamy nie tylko pasjonatów historii lokalnej, ale wszystkich otwartych na nowe opowieści.
-				<br />
-				<br />
-				Przez <span class="bigger">5 dni (1-5 lipca)</span> uczestnicy pod okiem doświadczonych prowadzących będą odkrywać lokalne dziedzictwo: odwiedzą archiwa, spotkają się z świadkami historii i twórcami ekspozycji. Efekty swoich poszukiwań przedstawią na wystawie plenerowej.
+				Jak wyglądały tamte wakacje, co było w modzie, co było można,
+				a co było zakazane, jak bawiły się dzieci, a jak odpoczywali rodzice?
+				Jak wyglądało życie letników w pensjonatach rozsianych na linii otwockiej?
+				Kto przyjeżdżał do Otwocka, Józefowa czy nad Świder?
+				Jak wyglądał ówczesny świat i czy coś zapowiadało jego koniec?
 			</div>
-			<div class="logo-wrap">
-				<a href="https://forms.gle/fPbium7Hq6YFBuny6" class="link" target="_blank">
-					zgłoś się
-				</a>
+			<div style="flex: 0 1 100%; align-self: flex-end;">
+				<span class="bigger">
+					Wspólnie opowiedzmy o wyjątkowych wakacjach!
+				</span>
+				<br />
+				<br />
+				Zajrzymy do archiwów, porozmawiamy ze świadkami historii, sięgniemy po rodzinne pamiątki.
+				<br />
+				<br />
+				Zapraszamy uczniów szkół średnich na bezpłatne warsztaty, w czasie których przygotujemy plenerową ekspozycję, którą zaprezentujemy na koniec wakacji na plaży miejskiej nad Świdrem.
+				<br />
+				<br />
+				Warsztaty odbędą się w dniach <span class="bigger">1-5 lipca w Wawerskim Centrum Kultury (Filia Radość)</span>. Warunkiem uczestnictwa w projekcie jest wypełnienie ankiety
 			</div>
 			<div class="logo-wrap" style="min-width: 18em">
 				<img class="m-k-logo" src="assets/ministerstwo-kultury.png" />
@@ -217,6 +271,9 @@
 					<br />
 					pochodzących z Funduszu Promocji Kultury.
 				</p>
+				<a href="https://forms.gle/fPbium7Hq6YFBuny6" class="btn-big" target="_blank">
+					zgłoś się
+				</a>
 			</div>
 		</div>
 	</div>
