add dot at the end

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 				Zapraszamy uczniów szkół średnich na bezpłatne warsztaty, w czasie których przygotujemy plenerową ekspozycję, którą zaprezentujemy na koniec wakacji na plaży miejskiej nad Świdrem.
 				<br />
 				<br />
-				Warsztaty odbędą się w dniach <span class="bigger">1-5 lipca w Wawerskim Centrum Kultury (Filia Radość)</span>. Warunkiem uczestnictwa w projekcie jest wypełnienie ankiety
+				Warsztaty odbędą się w dniach <span class="bigger">1-5 lipca w Wawerskim Centrum Kultury (Filia Radość)</span>. Warunkiem uczestnictwa w projekcie jest wypełnienie ankiety.
 			</div>
 			<div class="logo-wrap" style="min-width: 18em">
 				<img class="m-k-logo" src="assets/ministerstwo-kultury.png" />
